Fixed quote alignment for realsies

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ a{
   font-weight: 700;
   padding-bottom: 180px;
   padding-top: 20px;
+  padding-right: 40px;
 }
 
 .call{
